<resources>
    <string name="NoxBox">NoxBox</string>
    <string name="waterDescription">At least liter of water must be delivered</string>
    <string name="plantDescription">Gardener must has seedling and shovel</string>
    <string name="nannyDescription">Nanny must be polite and kind</string>
    <string name="photographerDescription">Photographer must share photos in the end of photo session</string>
    <string name="meditationDescription">Meditation and lection</string>
    <string name="haircutDescription">Hairdresser must has tools for cutting hair</string>
    <string name="massageDescription">Masseur should help body relax and become more healthy</string>
    <string name="cleaningDescription">Cleaner must has garbage begs</string>
    <string name="nannyDuration">Hour of childcare</string>
    <string name="photographerDuration">Hour of photographing</string>
    <string name="waterDuration">Hour of water delivering</string>
    <string name="meditationDuration">Hour of meditation lesson</string>
    <string name="plantDuration">Hour of planting sapling</string>
    <string name="haircutDuration">Hour of haircutting</string>
    <string name="massageDuration">Hour of massage</string>
    <string name="cleaningDuration">Hour of cleaning</string>
    <string name="permissionRequired">Permission required</string>
    <string name="completeText">Complete</string>
    <string name="ratingTitle">Rate</string>
    <string name="requestText">Request</string>
    <string name="requestingPushContent">Waiting for an answer…</string>
    <string name="goOnlineText">Go online</string>
    <string name="acceptText">Accept</string>
    <string name="goOfflineText">Go Offline</string>
    <string name="cancelText">Cancel</string>
    <string name="rateButton">Send</string>
    <string name="highRatingQuestion">What qualities You want to notification?</string>
    <string name="lowRatingQuestion">What qualities should be improved?</string>
    <string name="responsibility">Responsibility</string>
    <string name="accuracy">Accuracy</string>
    <string name="politeness">Politeness</string>
    <string name="kindness">Kindness</string>
    <string name="sincerity">Sincerity</string>
    <string name="wisdom">Wisdom</string>
    <string name="humor">Humor</string>
    <string name="patience">Patience</string>
    <string name="logoutText">Logout</string>
    <string name="myCar">My car</string>
    <string name="payments">Payments</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="nanny">Nanny</string>
    <string name="photographer">Photographer</string>
    <string name="meditation">Meditation lessons</string>
    <string name="water">Drinking water</string>
    <string name="plant">Plant a sapling</string>
    <string name="cleaning">Cleaning</string>
    <string name="waterSupplier">Water supplier</string>
    <string name="guru">Guru</string>
    <string name="gardener">Gardener</string>
    <string name="hairdresser">Hairdresser</string>
    <string name="masseur">Masseur</string>
    <string name="cleaner">Cleaner</string>
    <string name="tirefitting">Tire fitting</string>
    <string name="sendMessage">Send message</string>
    <string name="history">History</string>
    <string name="wallet">Wallet</string>
    <string name="balance">Balance %s</string>
    <string name="price">Price %s</string>
    <string name="priceTxt">Price</string>
    <string name="serviceAvailable">service available</string>
    <string name="servicesAvailable">services available</string>
    <string name="serviceUnavailable">Not enough money for service. Please send at least %s</string>
    <string name="walletAddress">Your wallet</string>
    <string name="addressToTransfer">Address to which you want to transfer money</string>
    <string name="transfer">Transfer</string>
    <string name="transferPrompt">Are you sure you want to transfer your money?</string>
    <string name="cancelPrompt">Are you sure you want to cancel?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="yourBalance">Your balance</string>
    <string name="frozenMoney">Temporarily blocked %s</string>
    <string name="dislike">dislike</string>
    <string name="like">like</string>
    <string name="dislikePrompt">Are you sure you want to dislike?</string>
    <string name="likePrompt">Are you sure you want to like?</string>
    <string name="send">Send</string>
    <string name="sendPrompt">Are you sure you want to send your money?</string>
    <string name="logout">Logout</string>
    <string name="logoutPrompt">Are you sure you want to logout?</string>
    <string name="acceptPushTitle">Request accepted</string>
    <string name="acceptingPushContent">Member was found</string>
    <string name="supplierCancelPushTitle">Request declined</string>
    <string name="supplierCanceledPushContent">Please try to request again</string>
    <string name="demanderCancelPushTitle">Request canceled</string>
    <string name="demanderCanceledPushContent">New request will be provided soon</string>
    <string name="completePushTitle">Payment done</string>
    <string name="completedPushContent">%s %s was transferred to performer</string>
    <string name="balancePushContent">Your balance is %s %s</string>
    <string name="balancePushTitle">Balance updated</string>
    <string name="qrPushTitle">Performer working</string>
    <string name="qrPushBody">%s happy to provide you a service</string>
    <string name="enterMessage">Type a message…</string>
    <string name="addressInClipBoard">Address copied to clipboard</string>
    <string name="chat">Chat</string>
    <string name="isOffline">No network connection</string>
    <string name="enable">Connect</string>
    <string name="isGps">No GPS signal</string>
    <string name="agreement">I agree to the %1$s and %2$s</string>
    <string name="authRules">Term of services</string>
    <string name="authPrivacyPolicy">Privacy Policy</string>
    <string name="rulesLink">https://noxbox.io/rules.pdf</string>
    <string name="privacyPolicyLink">https://noxbox.io/NoxBoxPrivacyPolicy.pdf</string>
    <string name="promoVideoLink">https://www.youtube.com/watch?v=E_Q1wTN27jk</string>
    <string name="rules">Rules</string>
    <string name="privacyPolicy">Policy</string>
    <string name="i">I</string>
    <string name="want">want</string>
    <string name="supply">supply</string>
    <string name="supplyuppercase">Supply</string>
    <string name="demand">demand</string>
    <string name="demanduppercase">Demand</string>
    <string name="service">service</string>
    <string name="earn">earn</string>
    <string name="spend">to spend</string>
    <string name="host">waiting at given address</string>
    <string name="beWalk">foot</string>
    <string name="onBike">bike</string>
    <string name="onCar">car</string>
    <string name="onTransit">transit</string>
    <string name="travelMode">The way of traveling</string>
    <string name="post">Post</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="daily">daytime from 10 to 18</string>
    <string name="nightly">night from 18 to 10</string>
    <string name="accurate">set the time manually</string>
    <string name="serviceDeliveryTime">Service delivery time</string>
    <string name="startTime">Beginning of working time:</string>
    <string name="endTime">End of working hours:</string>
    <string name="selectService">Select service</string>
    <string name="priceService">Price of services:</string>
    <string name="priceOneHourOfService">Price 1(hour) services</string>
    <string name="trackLocation">Track location</string>
    <string name="from">from </string>
    <string name="to">to </string>
    <string name="availableTime">Available time</string>
    <string name="myRating">My rating</string>
    <string name="description">Description</string>
    <string name="readyToPerform">Ready to perform of service:</string>
    <string name="wantToGet">I want to get service:</string>
    <string name="get">I get</string>
    <string name="perform">I perform</string>
    <string name="order">To order</string>
    <string name="proceed">Proceed</string>
    <string name="dateRegistrationService">Date of publication service</string>
    <string name="minutes">" minutes"</string>
    <string name="minute">" minute"</string>
    <string name="willPay">I will pay</string>
    <string name="waitThrough"> Wait through</string>
    <string name="arriveVia"> I\'ll arrive via</string>
    <string name="km">km</string>
    <string name="travelTime">Travel time</string>
    <string name="distance">Distance</string>
    <string name="priceClarificationBefore">Is indicated cost</string>
    <string name="priceClarificationAfter">performance of the service, the payment will be calculated per second depending on the actual execution time.</string>
    <string name="ending">s</string>
    <string name="byAddress">By address</string>
    <string name="search">enter your address</string>
    <string name="choosePlace">Choose place</string>
    <string name="validityOfTheOffer">Validity of the offer</string>
    <string name="waitingByAddress">I\'m waiting on the address:</string>
    <string name="across">Across</string>
    <string name="willArriveAtTheAddress">I will arrive at the address:</string>
    <string name="connectionWithInitiator">Connecting, please wait</string>
    <string name="acceptingConfirmation">Request incoming, please confirm..</string>
    <string name="change">change</string>
    <string name="changeAddress">Change address</string>
    <string name="or">or</string>
    <string name="chooseAll">Choose all</string>
    <string name="ok">ok</string>
    <string name="filters">Filters</string>
    <string name="contractService">Contract of service</string>
    <string name="filterMaxPriceText">The maximum cost of services</string>
    <string name="filterNoviceText">Show newbies</string>
    <string name="filterDemandText">Display the demand of all types of services</string>
    <string name="filterSupplyText">Display offer of all types of services</string>
    <string name="noxboxType">Service type</string>
    <string name="filterTypeServiceText">Filter types of services displayed on the map</string>
    <string name="max">any</string>
    <string name="profile">Profile</string>
    <string name="workSamples">Work Samples</string>
    <string name="certificates">Certificates</string>
    <string name="workAtHome">Work at home</string>
    <string name="chooseTravelMode">Way of travel</string>
    <string name="uploadingProgressTitle">Uploading image %s%%</string>
    <string name="uploadingProgressContent">%s seconds left</string>
    <string name="name">Name</string>
    <string name="uploadingStarted">Uploading started</string>
    <string name="haveHost">have the opportunity to host</string>
    <string name="notHaveHost">no opportunity to host</string>
    <string name="serviceProvided">Services:</string>
    <string name="addProvidedService">Add service</string>
    <string name="noComments">No comments</string>
    <string name="edit">Edit</string>
    <string name="cancelReason">Reason:</string>
    <string name="substandardWork">Bab result</string>
    <string name="own">Other</string>
    <string name="rudeBehavior">Rude</string>
    <string name="photoDoesNotMatch">Does not match photo</string>
    <string name="longToWait">Too Far</string>
    <string name="currency">Waves</string>
    <string name="byType">Type</string>
    <string name="byPrice">Price</string>
    <string name="byRating">Rating</string>
    <string name="sortBy">Sort</string>
    <string name="aboutApp">About</string>
    <string name="start_promo_video">Video</string>
    <string name="tutorial">Tutorial</string>
    <string name="timePassed">Time passed</string>
</resources>