<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_layout"
    android:windowNoTitle="true"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapId"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/requestButton"
            style="@style/MainButtonStyle"
            android:text="@string/requestText"
        />

        <Button
            android:id="@+id/goOnlineButton"
            style="@style/MainButtonStyle"
            android:text="@string/goOnlineText"
        />

        <Button
            android:id="@+id/goOfflineButton"
            style="@style/MainButtonStyle"
            android:text="@string/goOfflineText"
            android:background="@color/divider"
        />

        <Button
            android:id="@+id/acceptButton"
            style="@style/MainButtonStyle"
            android:text="@string/acceptText"
        />

        <Button
            android:id="@+id/completeButton"
            style="@style/MainButtonStyle"
            android:text="@string/completeText"
        />

        <Button
            android:id="@+id/cancelButton"
            style="@style/MainButtonStyle"
            android:text="@string/cancelText"
        />

        <ImageView
            android:id="@+id/pointerImage"
            style="@style/IconButtonStyle"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="42dp"
            android:src="@drawable/pointer"
            />

        <ImageView
            android:id="@+id/menu"
            style="@style/IconButtonStyle"
            android:layout_gravity="start|top"
            android:src="@drawable/menu"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            />

        <LinearLayout
            android:layout_gravity="end|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            >

            <ImageView
                android:id="@+id/showQrCode"
                style="@style/IconButtonStyle"
                android:src="@drawable/qr"
                />

            <ImageView
                android:id="@+id/scanQrCode"
                style="@style/IconButtonStyle"
                android:src="@drawable/scan_qr"
                />

            <ImageView
                android:id="@+id/chat"
                style="@style/IconButtonStyle"
                android:src="@drawable/chat"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="13dp"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/pathImage"
            style="@style/IconButtonStyle"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom ="74dp"
            android:layout_marginEnd ="14dp"
            android:src="@drawable/path"
            />

    </fragment>

</android.support.v4.widget.DrawerLayout>