<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/primary">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:textColor="@color/secondary"
            android:textSize="21sp" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listNoxboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLayout"
        android:layout_below="@+id/header"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/neutralButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:background="@color/fullTranslucent"
            android:text="@string/chooseAll"
            android:textColor="@color/secondary"
            android:textSize="15sp"
            android:paddingEnd="12dp"
            android:textStyle="normal"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:background="@color/secondary"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:background="@color/fullTranslucent"
            android:text="@string/cancel"
            android:textColor="@color/secondary"
            android:textSize="15sp"
            android:textStyle="normal"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:background="@color/secondary"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:background="@color/fullTranslucent"
            android:text="@string/ok"
            android:textColor="@color/secondary"
            android:textSize="15sp"
            android:textStyle="normal"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>